--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.10.4",
+    "@emotion/styled": "^11.10.4",
+    "@mui/icons-material": "^5.10.3",
+    "@mui/material": "^5.10.4",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
@@ -12,12 +16,15 @@
     "js-cookie": "^3.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.4.0",
     "react-loader-spinner": "^5.2.0",
     "react-router": "^6.3.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "reactjs-popup": "^2.0.5",
+    "socket.io-client": "4.4.0",
     "styled-components": "^5.3.5",
+    "tailwind-scrollbar-hide": "^1.1.7",
     "uuid": "^8.3.2",
     "web-vitals": "^2.1.4"
   },
@@ -46,6 +53,9 @@
     ]
   },
   "devDependencies": {
-    "babel-plugin-styled-components": "^2.0.7"
+    "autoprefixer": "^10.4.8",
+    "babel-plugin-styled-components": "^2.0.7",
+    "postcss": "^8.4.16",
+    "tailwindcss": "^3.1.8"
   }
 }
